test/std/negative/division_by_zero.ls
// Test: Division by Zero
// Layer: 2 | Category: negative | Covers: div/mod by zero, error propagation

10 / 0
-5 / 0
0 / 0
10 % 0
10.0 / 0.0
-5.0 / 0.0
0.0 / 0.0
